# aether-lang

./: .clang-format  CMakeLists.txt  README.md  compile.sh  ex.ae  ex.lox  run.sh
.github/workflows/: realease.yml
docs/: ARCHITECTURE.md  LANGUAGE_GUIDE.md  ROADMAP.md
examples/: classes.ae  closures.ae  fibonacci.ae
scripts/: install.ps1  install.sh
src/: main.cpp  version.hpp.in
src/core/: aether_class.cpp  aether_class.hpp  callable.cpp  callable.hpp  command.cpp  command.hpp  runtime_value.cpp  runtime_value.hpp  utils.cpp  utils.hpp
src/evaluator/: environment.hpp  evaluator.cpp  evaluator.hpp
src/exceptions/: error_handler.cpp  error_handler.hpp  return_exception.hpp
src/executor/: executor.cpp  executor.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/parser/: ast_node.hpp  expr.hpp  node_types.cpp  node_types.hpp  parser.cpp  parser.hpp  stmt.hpp
src/resolver/: resolver.cpp  resolver.hpp
src/scanner/: scan.cpp  scanner.hpp  token.cpp  token.hpp
